Updated html and ent_center.py files

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -110,19 +110,19 @@
     </div>
     <div class="container">
       
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="XNzduf6vWcA" data-toggle="modal" data-target="#trailer">
-    <img src="http://upload.wikimedia.org/wikipedia/en/f/f8/Zombie-ass-poster.jpg" width="200" height="322">
-    <h4>Zombie Ass: Toilet of the Dead</h4>
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="EqYiSlkvRuw" data-toggle="modal" data-target="#trailer">
+    <img src="https://upload.wikimedia.org/wikipedia/en/6/67/Pan%27s_Labyrinth.jpg" width="200" height="322">
+    <h4>Hackers</h4>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="zgrKLjoWcbs" data-toggle="modal" data-target="#trailer">
-    <img src="http://upload.wikimedia.org/wikipedia/en/9/96/Robo_geisha.jpg" width="200" height="322">
-    <h4>RoboGeisha</h4>
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="EqYiSlkvRuw" data-toggle="modal" data-target="#trailer">
+    <img src="https://upload.wikimedia.org/wikipedia/en/6/67/Pan%27s_Labyrinth.jpg" width="200" height="322">
+    <h4>Pans Labyrinth</h4>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="_SKWQm2sGsg" data-toggle="modal" data-target="#trailer">
-    <img src="http://upload.wikimedia.org/wikipedia/en/3/39/Mutant-girls-squad-poster.jpg" width="200" height="322">
-    <h4>Mutant Girl Squad</h4>
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="pWdKf3MneyI" data-toggle="modal" data-target="#trailer">
+    <img src="https://upload.wikimedia.org/wikipedia/en/7/75/Ant-Man_poster.jpg" width="200" height="322">
+    <h4>Ant Man</h4>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="MV4cgs-bPic" data-toggle="modal" data-target="#trailer">
@@ -135,9 +135,9 @@
     <h4>Soul Plane</h4>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="kSDNIYw1nLI" data-toggle="modal" data-target="#trailer">
-    <img src="http://upload.wikimedia.org/wikipedia/en/a/a9/FeardotCom_poster.jpg" width="200" height="322">
-    <h4>Fear dot com</h4>
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="HxoBJmyAS04" data-toggle="modal" data-target="#trailer">
+    <img src="https://upload.wikimedia.org/wikipedia/en/e/ea/Animalhouseposter.jpg" width="200" height="322">
+    <h4>Animal House</h4>
 </div>
 
     </div>
