Removed duplicate entries...

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -110,8 +110,8 @@
     </div>
     <div class="container">
       
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="EqYiSlkvRuw" data-toggle="modal" data-target="#trailer">
-    <img src="https://upload.wikimedia.org/wikipedia/en/6/67/Pan%27s_Labyrinth.jpg" width="200" height="322">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="Ql1uLyuWra8" data-toggle="modal" data-target="#trailer">
+    <img src="https://upload.wikimedia.org/wikipedia/en/6/67/Hackersposter.jpg" width="200" height="322">
     <h4>Hackers</h4>
 </div>
 
